<resources>
    <string name="app_name">SdnApp</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logOut">LogOut</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Setting</string>
    <string name="driver">Driver</string>
    <string name="vehicle">Vehicle</string>
    <string name="driver_vehicle">Driver Vehicle</string>
    <string name="groups">Groups</string>
    <string name="live_tracking">Live Tracking</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="search">search</string>
    <string name="plate">Plate#</string>
    <string name="driver_name">Driver Name</string>
    <string name="license_start">License Start</string>
    <string name="license_end">License End</string>
    <string name="current_miles_age">Current Miles Age</string>
    <string name="new_group">New Group</string>
    <string name="group_name">Group Name</string>
    <string name="logout">LogOut</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="gps_unitid">GPS UnitID</string>
    <string name="sim">Sim</string>
    <string name="max_speed">Max Speed</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="update">Update</string>
</resources>