<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.dashboard.groups.AddGroupActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_addGroupActivity_addGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:title="@string/new_group"
        android:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <cz.ackee.ui.textfield.TextInputLayout
        android:id="@+id/ti_addGroupActivity_groupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/group_name"
        android:textColorHint="@color/black"
        app:boxBackgroundColor="#F1F0F0"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="1dp"
        app:hintEnabled="true"
        app:hintPaddingTop="12dp"
        app:hintTextColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_addGroupActivity_addGroup"

        >

        <cz.ackee.ui.textfield.TextInputEditText
            android:id="@+id/et_addGroupActivity_groupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:paddingStart="16dp"
            android:paddingTop="28dp"
            android:paddingBottom="16dp"
            android:singleLine="true"
            android:textColor="@color/black" />
    </cz.ackee.ui.textfield.TextInputLayout>

    <life.sabujak.roundedbutton.RoundedButton
        android:id="@+id/btn_addGroupActivity_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sdp"
        app:buttonCornerRadius="20dp"
        app:buttonGradientEndColor="@color/teal_200"
        app:buttonGradientStartColor="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_addGroupActivity_groupName" />


</androidx.constraintlayout.widget.ConstraintLayout>